# llm_ctf_automation

./: .gitignore  Dockerfile  LICENSE  README.md  difficulty_level_anaylsis.py  do_eval.sh  dump_json.sh  experiment_eval.sh  get-source-code.sh  get_oci_images.sh  get_oci_sofija.sh  launch.sh  llm_ctf_solve.py  llm_solve.sh  pyproject.toml  requirements.txt  rev_experiment.sh  run_baseline.py  run_dcipher.py  run_single_executor.py  save_images.sh  setup.sh  setup_baseline.sh  setup_chals.sh  setup_dcipher.sh  to_html.sh  yearly_eval.sh
config/: base_config.yaml  config_gpt.json
config/prompts/: base_prompt.yaml  executor_prompt.yaml  planner_prompt.yaml
configs/baseline/: base_config.yaml
configs/dcipher/: base_planner_executor.yaml  crypto_planner_executor.yaml  forensics_planner_executor.yaml  misc_planner_executor.yaml  pwn_planner_executor.yaml  rev_planner_executor.yaml  web_planner_executor.yaml
experiments/: do_eval.sh
hints/: base_hint.md
llm_ctf/: challenge.py  conversation.py  ctflogging.py  dump_commands.py  environment.py  llm_ctf_solve.py  tools.py  utils.py
llm_ctf_multiagent/: __main__.py  agent.py  conversation.py  environment.py  logging.py  prompting.py
nyuctf_baseline/: conversation.py  environment.py  utils.py
nyuctf_multiagent/: agent.py  config.py  conversation.py  environment.py  logging.py  prompting.py  utils.py
scripts/: chaltest.sh  database_summary.py  flag_in_output.py  launch_baseline.sh  log_summary.py  missing_oci.py  plot_results.py  print_transcript.py  pybefore.py  saveimg.sh  tar_oci_names.py
(+128 files in other folders)
